--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.3.0",
+    "react-native-svg": "15.2.0",
+    "react-native-svg-transformer": "^1.4.0",
     "react-native-wagmi-charts": "^2.4.1",
     "victory-native": "^37.0.3-next.0"
   },
